--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <h1>TOROS Y VACAS</h1>
     <form id="inicio-form">
       <label for="clave-inicio">Ingrese codigo secreto:</label>
-      <input type="text" id="idclave" />
+      <input type="password" id="idclave" />
       <input type="submit" value="Iniciar" />
     </form>
     <form id="juego-form">
